plugins {
    id 'java'
    id 'application'
}

group = 'smc.smedit'
version = '3.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// LWJGL 2.9.3 — the same version StarMade ships (previously SMEdit vendored the
// older 2.9.1). Only the pure-Java jars are pulled from Maven; the *native*
// libraries are loaded at runtime from the StarMade install's native/<os>
// folder (see smc.smedit.logic.StarMadeLogic#setBaseDir). StarMade rebuilds its
// LWJGL natives for Java 9+, whereas the stock LWJGL 2.x natives on Maven still
// link the removed libjawt `SUNWprivate_1.1` symbol and fail to load on the
// Java 21 toolchain -- so we deliberately do NOT depend on lwjgl-platform here.
def lwjglVersion = '2.9.3'

dependencies {
    implementation "org.lwjgl.lwjgl:lwjgl:${lwjglVersion}"
    implementation "org.lwjgl.lwjgl:lwjgl_util:${lwjglVersion}"

    // Modern Swing look-and-feel (3.7.1 to match what modern-docking-ui pulls in).
    implementation 'com.formdev:flatlaf:3.7.1'

    // Dockable / floating / collapsible panels (paint-program-style layout) with
    // layout persistence. modern-docking-ui adds FlatLaf integration.
    implementation 'io.github.andrewauclair:modern-docking-single-app:1.4.9'
    implementation 'io.github.andrewauclair:modern-docking-ui:1.4.9'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        exceptionFormat 'full'
    }
}

application {
    mainClass = 'smc.smedit.SMEdit'
}

jar {
    archiveBaseName = 'SMEdit'
    manifest {
        attributes 'Main-Class': 'smc.smedit.SMEdit'
    }
    // Build a runnable "fat" jar so the app can be launched with `java -jar`:
    // bundle the runtime dependencies' classes (FlatLaf, Modern Docking, LWJGL).
    // LWJGL *natives* are still loaded from the StarMade install at runtime, so
    // they are deliberately not bundled.
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('.jar') }
                .collect { zipTree(it) }
    }
    // Don't drag in the dependencies' own manifests, signatures or module-info
    // (they'd clash on the flattened classpath). Our own META-INF/services files
    // come from the source set, so they're preserved.
    exclude 'META-INF/MANIFEST.MF'
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    exclude 'module-info.class'
    exclude 'META-INF/versions/*/module-info.class'
}
